k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bootcamp-dev
  labels:
    app: pr-guardian
    team: bootcamp
